--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html, body {
     font-family: Tahoma, sans-serif;
     color: #202020;
     font-size: 16px;
-    background-color:#e4f2fd;
+    background-color:blue
 
 }
 p {
